2002-07-29  Terry Biggs <tbiggs@users.sourceforge.net>

	* added main/spell_pspell.c and main/spell.h
	* moved widgets from settings structure to
	  a widgets structure in gui/gnomesword.h
	
	

2002-07-27  Terry Biggs <tbiggs@users.sourceforge.net>

	* removed main/char_table.*, main/spell.* and main/spell_gui.*
	* added gui/editor_spell.h and gnome/editor_spell.c
	* spell checking now requires pspell but gnomesword will be built
	  without spell checking if configure does not find pspell.
	* gui stuff is removed from backend and main execpt main/settings.h	


2002-07-24  Terry Biggs <tbiggs@users.sourceforge.net>

	* added main/swprd.c and main/sword.h
	* moved functions that access backend from main/gs_gnomesword.c
	  to main/sword.c
	* moved main/gs_gnomesword.* to gui/gnomesword.h
	  and gnome/gnomesword.c
	* added src/gui/*.h to EXTRA_DIST in top level Makefile.am


2002-07-23  Terry Biggs <tbiggs@users.sourceforge.net>

	* added main/shortcutbar.c and main/shortcutbar.h
	* moved shortcutbar functions from main/gs_gnomesword.c
	  to main/shortcutbar.c



2002-07-22  Terry Biggs <tbiggs@users.sourceforge.net>

	* moved main/find_dlg_defs.h to gui/find_dlg_defs.h
	* moved change_verse(gchar * key) from gs_gnomesword.c
	  to gnome/main_window.c gui_change_verse(gchar * key).
	* moved change_module_and_key(gchar * module_name, gchar * key) 
	  from gs_gnomesword.c to gnome/main_window.c 
	  gui_change_module_and_key(gchar * module_name, gchar * key).
	

2002-07-18  Terry Biggs <tbiggs@users.sourceforge.net>

	* renamed main/gs_html.* to gui/html.h and gnome/html.c
	* removed main/gs_menu.*


2002-07-17  Terry Biggs <tbiggs@users.sourceforge.net>

	* changed gnome/bibletext_dialog.c, gnome/commentary_dialog.c 
	  and gnome/dictlex_dialog.c to open unlimited dialogs (well, 
	  limited by system resorces)


2002-07-16  Terry Biggs <tbiggs@users.sourceforge.net>

	* removed main/support.*
	* added gui/utilities.h
	* added gnome/utilities.c